# DirectX11-With-Windows-SDK

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  DX11 Without DirectX SDK.sln  DirectX11 With Windows SDK(01-10).sln  DirectX11 With Windows SDK(11-20).sln  DirectX11 With Windows SDK(2015 Win7).sln  DirectX11 With Windows SDK(2017 Win10).sln  DirectX11 With Windows SDK(2019 Win10).sln  DirectX11 With Windows SDK(2022 Win10).sln  DirectX11 With Windows SDK(21-30).sln  DirectX11 With Windows SDK(Win7).sln  DirectX11 With Windows SDK.sln  LICENSE  README.md  Updates.md  build_msvc.cmd  scripts.lua  xmake.lua
Project 01-09/: CMakeLists.txt  xmake.lua
Project 01-09/01 DirectX11 Initialization/: 01 DirectX11 Initialization(2015 Win7).vcxproj  01 DirectX11 Initialization(2017 Win10).vcxproj  01 DirectX11 Initialization(2019 Win10).vcxproj  01 DirectX11 Initialization(2022 Win10).vcxproj  CMakeLists.txt  CpuTimer.cpp  DXTrace.h  GameApp.cpp  GameApp.h  Main.cpp  d3dApp.cpp  d3dApp.h  d3dUtil.h  xmake.lua
Project 01-09/02 Rendering a Triangle/: 02 Rendering a Triangle(2015 Win7).vcxproj  02 Rendering a Triangle(2015 Win7).vcxproj.filters  02 Rendering a Triangle(2017 Win10).vcxproj  02 Rendering a Triangle(2017 Win10).vcxproj.filters  02 Rendering a Triangle(2019 Win10).vcxproj  02 Rendering a Triangle(2022 Win10).vcxproj  02 Rendering a Triangle(2022 Win10).vcxproj.filters  CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  xmake.lua
Project 01-09/03 Rendering a Cube/: 03 Rendering a Cube(2015 Win7).vcxproj  03 Rendering a Cube(2017 Win10).vcxproj  03 Rendering a Cube(2019 Win10).vcxproj  03 Rendering a Cube(2022 Win10).vcxproj  03 Rendering a Cube(2022 Win10).vcxproj.filters  CMakeLists.txt  GameApp.cpp  GameApp.h  GameTimer.cpp  Main.cpp  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  xmake.lua
Project 01-09/06 Mouse and Keyboard/: 06 Mouse and Keyboard(2015 Win7).vcxproj  06 Mouse and Keyboard(2017 Win10).vcxproj  06 Mouse and Keyboard(2017 Win10).vcxproj.filters  06 Mouse and Keyboard(2019 Win10).vcxproj  06 Mouse and Keyboard(2019 Win10).vcxproj.filters  06 Mouse and Keyboard(2022 Win10).vcxproj  CMakeLists.txt  DXTrace.h  GameApp.cpp  GameApp.h  Main.cpp  d3dApp.cpp  d3dApp.h  d3dUtil.h
Project 01-09/06 Use ImGui/: CMakeLists.txt  CpuTimer.cpp  GameApp.cpp  GameApp.h  Main.cpp  WinMin.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  imgui.ini  xmake.lua
Project 01-09/07 Lighting/: 07 Lighting(2015 Win7).vcxproj  07 Lighting(2015 Win7).vcxproj.filters  07 Lighting(2017 Win10).vcxproj  07 Lighting(2017 Win10).vcxproj.filters  07 Lighting(2019 Win10).vcxproj  07 Lighting(2019 Win10).vcxproj.filters  07 Lighting(2022 Win10).vcxproj  CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  d3dApp.cpp  d3dApp.h  d3dUtil.h  imgui.ini  xmake.lua
Project 01-09/08 Direct2D and Direct3D Interoperability/: 08 Direct2D and Direct3D Interoperability(2015 Win7).vcxproj  08 Direct2D and Direct3D Interoperability(2015 Win7).vcxproj.filters  08 Direct2D and Direct3D Interoperability(2017 Win10).vcxproj  08 Direct2D and Direct3D Interoperability(2017 Win10).vcxproj.filters  08 Direct2D and Direct3D Interoperability(2019 Win10).vcxproj  08 Direct2D and Direct3D Interoperability(2022 Win10).vcxproj  CMakeLists.txt  GameApp.cpp  GameApp.h  GameTimer.cpp  LightHelper.h  Main.cpp  Vertex.h  d3dApp.cpp  d3dApp.h  xmake.lua
Project 01-09/09 Texture Mapping/: 09 Texture Mapping(2015 Win7).vcxproj  09 Texture Mapping(2017 Win10).vcxproj  09 Texture Mapping(2019 Win10).vcxproj  09 Texture Mapping(2022 Win10).vcxproj  09 Texture Mapping(2022 Win10).vcxproj.filters  CMakeLists.txt  DXTrace.cpp  GameApp.cpp  GameApp.h  LightHelper.h  Main.cpp  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  imgui.ini  xmake.lua
Project 01-09/Texture/: flare.dds
Project 10-16/13 Living Without FX11/: 13 Living Without FX11(2015 Win7).vcxproj  13 Living Without FX11(2015 Win7).vcxproj.filters  13 Living Without FX11(2017 Win10).vcxproj  13 Living Without FX11(2019 Win10).vcxproj  13 Living Without FX11(2022 Win10).vcxproj  13 Living Without FX11(2022 Win10).vcxproj.filters  BasicEffect.cpp  CMakeLists.txt  Camera.h  Effects.h  GameApp.cpp  GameApp.h  GameObject.cpp  Mouse.h  RenderStates.cpp  RenderStates.h  d3dApp.cpp  d3dApp.h
Project 10-16/14 Depth Test/: 14 Depth Test(2015 Win7).vcxproj  14 Depth Test(2015 Win7).vcxproj.filters  14 Depth Test(2017 Win10).vcxproj  14 Depth Test(2019 Win10).vcxproj  14 Depth Test(2022 Win10).vcxproj  14 Depth Test(2022 Win10).vcxproj.filters  BasicEffect.cpp  CMakeLists.txt  Camera.cpp  Effects.h  GameApp.cpp  GameApp.h  GameObject.cpp  GameObject.h  Vertex.cpp  d3dApp.cpp  d3dUtil.h
Project 10-17/: CMakeLists.txt  xmake.lua
Project 10-17/10 Camera/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  xmake.lua
Project 10-17/11 Blending/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  imgui.ini  xmake.lua
Project 10-17/12 Depth and Stenciling/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  imgui.ini  xmake.lua
Project 10-17/13 Living Without FX11/: BasicEffect.cpp  CMakeLists.txt  Effects.h  GameApp.cpp  GameApp.h  Main.cpp  imgui.ini  xmake.lua
Project 10-17/14 Depth Test/: BasicEffect.cpp  CMakeLists.txt  Effects.h  GameApp.cpp  GameApp.h  GameObject.h  Main.cpp  imgui.ini  xmake.lua
Project 10-17/15 Geometry Shader Beginning/: BasicEffect.cpp  CMakeLists.txt  Effects.h  GameApp.cpp  GameApp.h  Main.cpp  imgui.ini  xmake.lua
Project 10-17/16 Stream Output/: BasicEffect.cpp  CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  xmake.lua
Project 10-17/17 Tree Billboard/: BasicEffect.cpp  CMakeLists.txt  EffectHelper.h  Effects.h  GameApp.cpp  GameApp.h  GameTimer.cpp  Main.cpp  imgui.ini  xmake.lua
Project 10-17/Common/: Camera.cpp  Camera.h  DXTrace.h  Geometry.h  RenderStates.cpp  RenderStates.h  Transform.h  (+7 more)
Project 17-25/: CMakeLists.txt
Project 19-/: CMakeLists.txt  xmake.lua
Project 26-30/: CMakeLists.txt
Project 31-32/: CMakeLists.txt
Project 31-35/: CMakeLists.txt
Project 36-/: CMakeLists.txt
(+2528 files in other folders)
