cmake_minimum_required (VERSION 3.8)

project ("DirectX11 With Windows SDK")

option(WIN7_SYSTEM_SUPPORT "Windows7 users need to select this option!" OFF)

add_subdirectory("Project 01-09")
add_subdirectory("Project 10-16")
add_subdirectory("Project 17-25")
add_subdirectory("Project 26-30")
add_subdirectory("Project 31-")

